--- a/css/fonts.css
+++ b/css/fonts.css
@@ -1,6 +1,6 @@
 /*@font-face*/
 
 @font-face {
-    font-family: "Roboto";
-    src: url(../fonts/Roboto/Roboto-Regular.ttf)
+  font-family: "Roboto";
+  src: url(../assets/fonts/Roboto/Roboto-Regular.ttf);
 }
