--- a/css/partials/_variables.css
+++ b/css/partials/_variables.css
@@ -1,24 +1,23 @@
-html,body{
-    margin: 0%;
-    box-sizing: border-box;
-    width: 100%;
-    height: 100%;
+html,
+body {
+  margin: 0%;
+  box-sizing: border-box;
+  width: 100%;
+  height: 100%;
 }
 
 /*Variables*/
 
-:root{
-    --primary-color: #4458dc;
-    --primary-color2: #854fee;
-    --title-color: #141313;
-    --text-color: #777777;
-    --border-color: #201f1f17;
-    --gradient-color: linear-gradient(90deg,#38a0f2 0%, #2b53cc 100%);
-    --shadow-color: 0px 10px 30px rgba(118,85,225,0.3);
-    --box-shadow: 0px 10px 30px rgba(57,56,61,0.205);
+:root {
+  --primary-color: #4458dc;
+  --primary-color2: #854fee;
+  --title-color: #141313;
+  --text-color: #777777;
+  --border-color: #201f1f17;
+  --gradient-color: linear-gradient(90deg, #38a0f2 0%, #2b53cc 100%);
+  --shadow-color: 0px 10px 30px rgba(118, 85, 225, 0.3);
+  --box-shadow: 0px 10px 30px rgba(57, 56, 61, 0.205);
 
-    /*fonts*/
-    --roboto:'Roboto',cursive;
-
+  /*fonts*/
+  --roboto: "Roboto", cursive;
 }
-
